# ProjetM2

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.2f89e3e
3D_OBJECTS/3DS/: B1BOMBER.3DS  B2.3DS  big_f14.3ds
3D_OBJECTS/OFF/: B1BOMBER.off
include/: arcball.h  axis.h  drawableobject.h  light.h  mainwindow.h  mainwindow.ui  meshobject.h  meshviewerwidget.h
libs/OpenMesh-7.1/lib/: libOpenMeshCore.so.7.1  libOpenMeshTools.so.7.1
pre-work/: compil.sh  main  main.cpp
shaders/: simple.frag.glsl  simple.geo.glsl  simple.vert.glsl
src/: arcball.cpp  axis.cpp  drawableobject.cpp  light.cpp  main.cpp  mainwindow.cpp  meshobject.cpp  meshviewerwidget.cpp
